--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 	<div class="character" id="ai3"><img src="assets/images/spartan.gif" id="spartan1" class="third-small-spartan"></div>
 	<div class="character" id="ai4"><img src="assets/images/spartan.gif" id="spartan1" class="fourth-small-spartan"></div>
 
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col-lg-3 note">
 				<h4>PC version only. Hard mode ai finishes not yet implemented.</h4>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="container">
 		<div class="row">
